<resources>
    <string name="app_name">TinderZaSirotinju</string>

    <!--HOME FRAGMENT-->
    <string name="Dating_app">Hotlin</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login_button">LOGIN</string>
    <string name="Making_account">Don\'t have account yet? Register here.</string>
    <string name="Register_button">REGISTER NOW</string>

    <!--REGISTRATION FRAGMENT-->
    <string name="Registration_email">Enter email</string>
    <string name="Registration_password">Choose spssword</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="User_name">Choose user name</string>
    <string name="Name">Write your name</string>
    <string name="Age">Write your age</string>

    <!--PROFILE FRAGMENT-->
    <string name="show_user_name">User name</string>
    <string name="show_user_age">User age</string>
    <string name="show_user_description">User full name</string>

    <!--MATCHES FRAGMENT-->
    <string name="matches">MATCHES</string>

    <!--LIST ROW FRAGMENT-->
    <string name="match_name">Match name</string>
    <string name="match_age">Match age</string>
    <string name="match_username">Match username</string>
    <string name="profile_picture_of_match">Profile picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>